--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -98,8 +98,6 @@ header section {
     height: 300px; */
 }
 
-
-
 header section h1 {
     font-size: 3em;
     padding: 3%;
@@ -135,6 +133,9 @@ header section span {
 }
 
 /* blocco principale pagina */
+main section {
+    height: 100vh;
+}
 main section::after {
     content: "";
     display: table;
@@ -144,17 +145,42 @@ main section::after {
 .col {
     float: left;
     margin: 5%;
-    width: 40%;
     /* debugging */
-    background-color: cornflowerblue;
-    height: 800px;
+    /* background-color: cornflowerblue;
+    height: 800px; */
+}
+
+.col-1 {
+    width: 50%;
+}
+
+.col-2 {
+    width: 30%;
+}
+
+.grey {
+    background-color: lightgray;
 }
 
 .no-clearfix {
     width: 100%;
     /* debugging */
-    background-color: cornflowerblue;
+    /* background-color: cornflowerblue; */
     height: 800px;    
+}
+
+main section h2 {
+    font-size: 2.5em;
+    padding: 10% 0 5% 0;
+}
+
+main section p {
+    font-size: 1em;
+    line-height: 1.6;
+}
+
+main section img {
+    width: 100%;
 }
 
 /* footer */
