--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -162,13 +162,6 @@ main section::after {
     background-color: lightgray;
 }
 
-.no-clearfix {
-    width: 100%;
-    /* debugging */
-    /* background-color: cornflowerblue; */
-    height: 800px;    
-}
-
 main section h2 {
     font-size: 2.5em;
     padding: 10% 0 5% 0;
@@ -181,6 +174,46 @@ main section p {
 
 main section img {
     width: 100%;
+}
+
+.no-clearfix {
+    width: 100%;
+    text-align: center;
+    /* debugging */
+    /* background-color: cornflowerblue; */
+    height: fit-content;
+}
+
+.no-clearfix h2 {
+    padding: 5% 10% 2% 10%;
+}
+
+.no-clearfix p {
+    padding: 0 10%;
+}
+
+.no-clearfix img {
+    width: 80%;
+}
+
+.no-clearfix h3 {
+    font-size: 1.5em;
+}
+
+#mac-2 {
+    display: block;
+    padding: 2% 3%;
+    border-radius: 30px;
+    margin: 3% auto;
+    font-size: 1em;
+    background-color: lightsteelblue;
+    color: white;
+    width: 20%;
+}
+
+.fa-long-arrow-alt-down {
+    margin-right: 3.5%;
+    color: white;
 }
 
 /* footer */
